--- a/ClientApp/src/app/modules/inward-material/add-edit-accessory/add-edit-accessory.component.html
+++ b/ClientApp/src/app/modules/inward-material/add-edit-accessory/add-edit-accessory.component.html
@@ -3,38 +3,43 @@
 </div>
 <div class="modal-body">
     <form [formGroup]="addAccessoryForm" novalidate>
-   <div class="row">
-    <div class="col-12 col-md-6 col-lg-4">
-        <div class="form-group has-float-label">
-            <input class="form-control" [(ngModel)]="accessoryInputModel.materialType"  id="materialType" type="text" placeholder="Material Type"
-                formControlName="materialType" />
+      <div class="row">
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="form-group has-float-label">
+            <input autocomplete="new"  class="form-control" [(ngModel)]="accessoryInputModel.materialType" id="materialType" type="text" placeholder="Material Type"
+                   formControlName="materialType" />
             <label for="materialType">Material Type</label>
             <div *ngIf="addAccessoryForm.controls['materialType'].invalid && (addAccessoryForm.controls['materialType'].dirty || addAccessoryForm.controls['materialType'].touched)"
-                class="error-msg">
-                <div *ngIf="addAccessoryForm.controls['materialType'].errors.required">
-                    Material type is required.
-                </div>
+                 class="error-msg">
+              <div *ngIf="addAccessoryForm.controls['materialType'].errors.required">
+                Material type is required.
+              </div>
             </div>
+          </div>
         </div>
-    </div>
-    <div class="col-12 col-md-6 col-lg-4">
-        <div class="form-group has-float-label">
-            <input class="form-control"  [(ngModel)]="accessoryInputModel.accessoryName" id="accessoryName" type="text" placeholder="Accessory Name"
-                formControlName="accessoryName" />
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="form-group has-float-label">
+            <input autocomplete="new"  class="form-control" [(ngModel)]="accessoryInputModel.accessoryName" id="accessoryName" type="text" placeholder="Accessory Name"
+                   formControlName="accessoryName" />
             <label for="accessoryName">Accessory Name</label>
             <div *ngIf="addAccessoryForm.controls['accessoryName'].invalid && (addAccessoryForm.controls['accessoryName'].dirty || addAccessoryForm.controls['accessoryName'].touched)"
-                class="error-msg">
-                <div *ngIf="addAccessoryForm.controls['accessoryName'].errors.required">
-                    Accessory name is required.
-                </div>
+                 class="error-msg">
+              <div *ngIf="addAccessoryForm.controls['accessoryName'].errors.required">
+                Accessory name is required.
+              </div>
             </div>
+          </div>
         </div>
-    </div>
-   </div>
+        <br />
+        <div class="col-12 col-md-12 col-lg-12">
+          <span *ngIf="errorMessage" class="text-danger text-center">{{errorMessage}}</span>  
+        </div>
+      </div>
    
     </form>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" (click)="addAccessoryForm.valid && saveAccessoryData()">Save</button>
-    <button class="btn btn-secondary" (click)="close()">Cancel</button>
+  <button class="btn btn-primary" (click)="addAccessoryForm.valid && saveAccessoryData()">Save</button>
+  <button class="btn btn-secondary" (click)="close()">Cancel</button>
+  
 </div>
