--- a/ClientApp/src/app/modules/inward-material/outward/outward.component.html
+++ b/ClientApp/src/app/modules/inward-material/outward/outward.component.html
@@ -107,7 +107,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <div class="form-group has-float-label">
-              <input class="form-control" id="paidImmediatlyAmount" (keyup)="onKeyFromPaidImmidiatly()" [(ngModel)]="outward.paidImmediatlyAmount" formControlName="paidImmediatlyAmount" type="number" placeholder="Paid Immediatly Amount" />
+              <input autocomplete="new"  class="form-control" id="paidImmediatlyAmount" (keyup)="onKeyFromPaidImmidiatly()" [(ngModel)]="outward.paidImmediatlyAmount" formControlName="paidImmediatlyAmount" type="number" placeholder="Paid Immediatly Amount" />
               <label for="paidImmediatlyAmount">Paid Immediatly Amount</label>
               <div *ngIf="outwardForm.controls['paidImmediatlyAmount'].invalid &&
                           (outwardForm.controls['paidImmediatlyAmount'].dirty || outwardForm.controls['paidImmediatlyAmount'].touched)"
@@ -133,7 +133,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <div class="form-group has-float-label">
-              <input class="form-control" id="enggName" [(ngModel)]="outward.enggName" type="text" formControlName="enggName" placeholder="Engg. Name" />
+              <input autocomplete="new"  class="form-control" id="enggName" [(ngModel)]="outward.enggName" type="text" formControlName="enggName" placeholder="Engg. Name" />
               <label for="enggName">Engg. Name</label>
               <div *ngIf="outwardForm.controls['enggName'].invalid &&
                           (outwardForm.controls['enggName'].dirty || outwardForm.controls['enggName'].touched)"
@@ -148,7 +148,7 @@
             <div class="form-group">
               <div class="input-group datepicker">
                 <label class="date-label">Outward Date</label>
-                <input class="form-control" placeholder="dd-mm-yyyy" [(ngModel)]="outward.ngbOutwardDate" name="dp"
+                <input autocomplete="new"  class="form-control" placeholder="dd-mm-yyyy" [(ngModel)]="outward.ngbOutwardDate" name="dp"
                        ngbDatepicker
                        #d1="ngbDatepicker" (click)="d1.toggle()" formControlName="outwardDate">
                 <div class="input-group-append">
@@ -246,7 +246,7 @@
             <div class="form-group">
               <div class="input-group datepicker">
                 <label class="date-label">Cheque Date</label>
-                <input class="form-control" placeholder="dd-mm-yyyy" [(ngModel)]="outward.ngbChequeDate" name="dp"
+                <input autocomplete="new"  class="form-control" placeholder="dd-mm-yyyy" [(ngModel)]="outward.ngbChequeDate" name="dp"
                        ngbDatepicker
                        #d2="ngbDatepicker" (click)="d2.toggle()" formControlName="chequeDate">
                 <div class="input-group-append">
@@ -267,7 +267,7 @@
           </div>
           <div *ngIf="outward.paymentMode == '2'" class="col-12 col-md-6 col-lg-4">
             <div class="form-group has-float-label">
-              <input class="form-control" [(ngModel)]="outward.chequeNo" formControlName="chequeNo" id="chequeNo" type="text" placeholder="Cheque Number" />
+              <input autocomplete="new"  class="form-control" [(ngModel)]="outward.chequeNo" formControlName="chequeNo" id="chequeNo" type="text" placeholder="Cheque Number" />
               <label for="chequeNo">Cheque Number</label>
               <div *ngIf="!outward.chequeNo"
                    class="error-msg">
@@ -279,7 +279,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <div class="form-group has-float-label">
-              <input class="form-control" id="paymentRecievedBy" [(ngModel)]="outward.paymentRecievedBy" formControlName="paymentRecievedBy" type="text" placeholder="{{outward.paymentMode == '2' ? 'Bank Name' : 'Payment Recieved By'}}" />
+              <input autocomplete="new"  class="form-control" id="paymentRecievedBy" [(ngModel)]="outward.paymentRecievedBy" formControlName="paymentRecievedBy" type="text" placeholder="{{outward.paymentMode == '2' ? 'Bank Name' : 'Payment Recieved By'}}" />
               <label for="paymentRecievedBy">{{outward.paymentMode == '2' ? 'Bank Name' : 'Payment Recieved By'}}</label>
               <div *ngIf="!outward.paymentRecievedBy && (outward.paymentMode == '2' || outward.paymentMode == '1')"
                    class="error-msg">
