--- a/Views/PDF/PrintAccountStatement.cshtml
+++ b/Views/PDF/PrintAccountStatement.cshtml
@@ -1,20 +1,25 @@
-﻿<!DOCTYPE html>
+﻿@model Gopal.Models.Report.AccountStatementModel
+@{
+    Layout = null;
+}
+<!DOCTYPE html>
 <html lang="en" id="print-section">
 <head>
     <meta charset="utf-8">
     <title>Account Statement</title>
     <!--<link rel="stylesheet" href="style.css" media="all" />-->
     <link href='https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap' rel='stylesheet' type='text/css'>
-    <style>
-    /* @@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap'); */
 
-    @@media print {
-        body {
-           font-family:Arial, Helvetica, sans-serif !important;
-           font-family: 'Poppins', sans-serif !important;
-           padding: 0 !important;
+    <style>
+        /* @@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap'); */
+
+        @@media print {
+            body {
+                font-family: Arial, Helvetica, sans-serif !important;
+                font-family: 'Poppins', sans-serif !important;
+                padding: 0 !important;
+            }
         }
-      }
     </style>
 </head>
 <body style="padding: 0 0px;page-break-after:always; background: #fff; font-family: 'Poppins', sans-serif !important;">
@@ -58,13 +63,14 @@
     padding: 7px;
     background: #f5f5f5;">
                 <p style="margin:0; font-weight:500; font-size: 14px;">
-                    Flat No 4, B Wing, Viththal Park, Samant Vadi, Near Ashok Stambh, Kashiba Medical Back side, Gangapur Road, Nashik - 422002.
-                    <strong>Contact</strong>: 9867545678, 9867545678
+                    @Model.addressPrint
+                    <strong>Contact</strong>: @Model.contactPrint
                 </p>
             </div>
         </div>
-        <h5 style="text-transform: uppercase; text-align: center;font-size: 18px;line-height: 30px;margin: 0;">A/C OF LOGIC SYSTEMS</h5>
-        <p style="text-align: center;font-size: 14px;line-height: 25px;margin: 0;font-weight: bold;">01/01/2020 TO 07/072020</p>
+
+        <h5 style="text-transform: uppercase; text-align: center;font-size: 18px;line-height: 30px;margin: 0;">A/C OF @Model.accountName</h5>
+        <p style="text-align: center;font-size: 14px;line-height: 25px;margin: 0;font-weight: bold;">@Model.fromDate TO @Model.toDate</p>
         <p style="text-align: center;text-transform: uppercase;font-size: 14px;line-height: 25px;margin-top: 0;font-weight: bold;">bill/outward Payment details</p>
         <table style="background:transparent; margin-bottom:20px; width: 100%;border:1px solid #ccc; border-collapse: collapse;">
             <tbody>
@@ -123,54 +129,58 @@
                                    background: transparent;
                                    font-size: 14px;
                                    line-height: 18px; font-weight: bold; vertical-align: top; text-align:right;">
-                                        7500
+                                        @Model.billOpeningBalance
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td style="padding: 5px 5px;
+                                @foreach (var item in Model.BillPaymentDetails)
+                                {
+                                    <tr>
+                                        <td style="padding: 5px 5px;
                               background: transparent;
                               font-size: 12px;
                               line-height: 18px; vertical-align: top; text-align:left;">
-                                        09/09/2020
-                                    </td>
-                                    <td style="padding: 5px 5px;
+                                            @item.billDate.Value.ToString("dd/MM/yyyy")
+                                        </td>
+                                        <td style="padding: 5px 5px;
                               background: transparent;
                               font-size: 12px;
                               line-height: 18px; vertical-align: top; text-align:left;">
-                                        12345
-                                    </td>
+                                            @item.billNumber
+                                        </td>
 
-                                    <td style="padding: 5px 5px;
+                                        <td style="padding: 5px 5px;
                               background: transparent;
                               font-size: 12px;
                               line-height: 18px; vertical-align: top; text-align:left;">
-                                        123456
-                                    </td>
-                                    <td style="padding: 5px 5px;
+                                            @item.jobNumber
+                                        </td>
+                                        <td style="padding: 5px 5px;
                               background: transparent;
                               font-size: 12px;
                               line-height: 18px; vertical-align: top; text-align:right;">
-                                        1000/-
-                                    </td>
-                                    <td style="padding: 5px 5px;
+                                             @item.serviceAmount
+                                        </td>
+                                        <td style="padding: 5px 5px;
                               background: transparent;
                               font-size: 12px;
                               line-height: 18px; vertical-align: top; text-align:right;">
-                                        1000/-
-                                    </td>
-                                    <td style="padding: 5px 5px;
+                                            @item.advancedAmount
+                                        </td>
+                                        <td style="padding: 5px 5px;
                               background: transparent;
                               font-size: 12px;
                               line-height: 18px; vertical-align: top; text-align:right;">
-                                        1000/-
-                                    </td>
-                                    <td style="padding: 5px 5px;
+                                            @item.paidImmidiateAmount
+                                        </td>
+                                        <td style="padding: 5px 5px;
                               background: transparent;
                               font-size: 12px;
                               line-height: 18px; vertical-align: top; text-align:right;">
-                                        500/-
-                                    </td>
-                                </tr>
+                                            @item.outstandingAmount
+                                        </td>
+                                    </tr>
+                                }
+
                             </tbody>
                         </table>
                         <!--first-table-end-->
@@ -226,54 +236,58 @@
                                    background: transparent;
                                    font-size: 14px;
                                    line-height: 18px; font-weight: bold; vertical-align: top; text-align:right;">
-                                        7500
+                                        @Model.outwardOpeningBalance
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td style="padding: 5px 5px;
+                                @foreach (var item in Model.OutwardPaymentDetails)
+                                {
+                                    <tr>
+                                        <td style="padding: 5px 5px;
                               background: transparent;
                               font-size: 12px;
                               line-height: 18px; vertical-align: top; text-align:left;">
-                                        09/09/2020
-                                    </td>
-                                    <td style="padding: 5px 5px;
+                                            @item.billDate.Value.ToString("dd/MM/yyyy")
+                                        </td>
+                                        <td style="padding: 5px 5px;
                               background: transparent;
                               font-size: 12px;
                               line-height: 18px; vertical-align: top; text-align:left;">
-                                        12345
-                                    </td>
+                                            @item.billNumber
+                                        </td>
 
-                                    <td style="padding: 5px 5px;
+                                        <td style="padding: 5px 5px;
                               background: transparent;
                               font-size: 12px;
                               line-height: 18px; vertical-align: top; text-align:left;">
-                                        123456
-                                    </td>
-                                    <td style="padding: 5px 5px;
+                                            @item.jobNumber
+                                        </td>
+                                        <td style="padding: 5px 5px;
                               background: transparent;
                               font-size: 12px;
                               line-height: 18px; vertical-align: top; text-align:right;">
-                                        1000/-
-                                    </td>
-                                    <td style="padding: 5px 5px;
+                                            @item.serviceAmount
+                                        </td>
+                                        <td style="padding: 5px 5px;
                               background: transparent;
                               font-size: 12px;
                               line-height: 18px; vertical-align: top; text-align:right;">
-                                        1000/-
-                                    </td>
-                                    <td style="padding: 5px 5px;
+                                            @item.advancedAmount
+                                        </td>
+                                        <td style="padding: 5px 5px;
                               background: transparent;
                               font-size: 12px;
                               line-height: 18px; vertical-align: top; text-align:right;">
-                                        1000/-
-                                    </td>
-                                    <td style="padding: 5px 5px;
+                                            @item.paidImmidiateAmount
+                                        </td>
+                                        <td style="padding: 5px 5px;
                               background: transparent;
                               font-size: 12px;
                               line-height: 18px; vertical-align: top; text-align:right;">
-                                        500/-
-                                    </td>
-                                </tr>
+                                            @item.outstandingAmount
+                                        </td>
+                                    </tr>
+                                }
+
                             </tbody>
                         </table>
                         <!--second-table-end-->
@@ -312,26 +326,29 @@
                                         &nbsp;
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td style="padding: 5px 5px;
+                                @foreach (var item in Model.LumpsumPaymentDetails)
+                                {
+                                    <tr>
+                                        <td style="padding: 5px 5px;
                          background: transparent;
                          font-size: 12px;
                          line-height: 18px; vertical-align: top; text-align:left;">
-                                        6/7/2020
-                                    </td>
-                                    <td style="padding: 5px 5px;
+                                            @item.billDate.Value.ToString("dd/MM/yyyy")
+                                        </td>
+                                        <td style="padding: 5px 5px;
                          background: transparent;
                          font-size: 12px;
                          line-height: 18px; vertical-align: top; text-align:left;">
-                                        Cash
-                                    </td>
-                                    <td style="padding: 5px 5px;
+                                            @item.paymentMode
+                                        </td>
+                                        <td style="padding: 5px 5px;
                          background: transparent;
                          font-size: 12px;
                          line-height: 18px; vertical-align: top; text-align:right;">
-                                        1000/-
-                                    </td>
-                                </tr>
+                                             @item.paidAmount
+                                        </td>
+                                    </tr>
+                                }
                             </tbody>
                         </table>
                     </td>
@@ -343,7 +360,7 @@
           background: transparent;
           font-size: 16px;
           line-height: 18px;font-weight: bold; width: 70%; vertical-align: bottom; text-align:right; border:0; border-right: 1px solid #ccc;border-top: 1px solid #ccc;">
-                        7500
+                        @Model.leftSideOutstandingAmount
                     </td>
                     <td colspan="3" style="padding: 5px 5px;
           background: transparent;
@@ -352,10 +369,10 @@
                         <table style="border:0; border-collapse:collapse; width:100%">
                             <tr>
                                 <td style="text-align: left;font-size: 14px;line-height: 18px;">Closing Balance</td>
-                                <td style="text-align: right;font-size: 14px;line-height: 18px; border-bottom: 1px solid #000;">7500</td>
+                                <td style="text-align: right;font-size: 14px;line-height: 18px; border-bottom: 1px solid #000;">@Model.rightSideClosingBalance</td>
                             </tr>
                             <tr>
-                                <td colspan="2" style="text-align: right; padding-top: 5px;">7500</td>
+                                <td colspan="2" style="text-align: right; padding-top: 5px;">@Model.rightSideBottomAmount</td>
                             </tr>
                         </table>
                     </td>
@@ -369,6 +386,7 @@
 
         </div>
     </main>
+
 
 </body>
 </html>
