--- a/ClientApp/src/app/modules/reports/account-statement/account-statement.component.html
+++ b/ClientApp/src/app/modules/reports/account-statement/account-statement.component.html
@@ -60,7 +60,8 @@
                 <div class="form-group">
                   <button type="button" (click)="GetAccountStatementReport()" class="btn btn-outline btn-outline-dark">Search</button>
                   <button type="button" (click)="clearFilter()" class="btn btn-outline btn-outline-dark">Reset</button>&nbsp;&nbsp;
-                  <a printSectionId="print-section" href="javascript:void(0)"><i (click)="getBase64EncodedImage()" class="fas fa-print orange"></i></a>
+                  <a printSectionId="print-section" href="javascript:void(0)"><i (click)="getBase64EncodedImage()" class="fas fa-print orange"></i></a>&nbsp;&nbsp;
+                  <a href="javascript:void(0)"><i (click)="getBase64EncodedImageSendEmail()" class="fas fa-envelope-square orange"></i></a>
                 </div>
               </div>
               
