--- a/Views/PDF/PrintAccountStatement.cshtml
+++ b/Views/PDF/PrintAccountStatement.cshtml
@@ -22,10 +22,10 @@
         }
     </style>
 </head>
-<body style="padding: 0 0px;page-break-after:always; background: #fff; font-family: 'Poppins', sans-serif !important;">
+<body style="padding: 0 0px; background: #fff; font-family: 'Poppins', sans-serif !important;">
     <!--customer-copy-start-->
     <main style="width:780px; margin-left:auto; margin-right:auto">
-        <div class="clearfix" style=" page-break-after:before; padding: 0px 0;
+        <div class="clearfix" style=" padding: 0px 0;
   margin-bottom: 10px;
   border: 0px solid #ccc;
   margin-top: 10px;">
